--- a/front/src/components/Admin/style.css
+++ b/front/src/components/Admin/style.css
@@ -1,3 +1,7 @@
+.evr {
+    text-align: center;
+    margin-top: 50px;
+}
 .product {
     width: 80%;
     height: auto;
@@ -6,3 +10,86 @@
     text-align: center;
     padding: 5%;
 }
+.obj {
+    width: 20%;
+    display: inline-block;
+    border-radius: 25px;
+    background-color: white;
+    text-align: center;
+    padding: 25x;
+    margin: 0 10px;
+}
+.obj img {
+    width: 50px;
+    height: auto;
+    margin: 25px 15px;
+}
+h2 {
+    font-size: 1em;
+    font-weight: 500;
+}
+.shoppingCart {
+    z-index: 1000;
+    margin-top: 25px;
+    position:fixed;
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.3);
+    right: 5%;
+    transition: all 0.25s ease-out;
+    background-image: url(sC-Blue.png);
+    background-repeat: no-repeat;
+    background-position: center; 
+}
+.shoppingCart:hover {
+    background-color: #1b1f22;
+    cursor: pointer;
+    background-image: url(sC-White.png);
+}
+button:focus {outline:0;}
+.shoppingCart:active {
+    width: 45px;
+    height: 45px;
+}
+.shoppingCart.active {
+    background-image: url(x-Blue.png);
+}
+.shoppingCart.active:hover {
+    background-image: url(x-White.png);
+}
+.quote {
+    display: none;
+}
+.quoteBG.active {
+    display: inherit;
+    z-index: 5;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height:30vh;
+    width: 100%;
+    display: inline-block;
+    background-color: rgba(0,0,0,0.95);
+}
+.quote {
+    display: none;
+}
+.quote.active {
+    display: inherit;
+    position: absolute;
+    left: 50%;
+    top:50%;
+    z-index: 6;
+    transform: translate(-50%, -50%);
+    color: white;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    overflow-y: scroll;
+}
+/* input[type=text], input[type=number] {
+
+} */
